--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DB_NAME=technologies
-DB_USER=techuser
-DB_PASSWORD=6z9lu4m3DVTC2UHI8E62PrCruCEsXDlZ
-DB_HOST=dpg-d20tk895pdvs739ehpcg-a.oregon-postgres.render.com
-DB_PORT=5432
+DATABASE_URL=postgresql://techuser:1MxWmwQbiiSMRdWKbLpoBqo7ldAb33lP@dpg-d20v5o95pdvs739gcrh0-a.oregon-postgres.render.com/technologies_xz1x
